--- a/src/components/PortfolioSection/Portfolio.css
+++ b/src/components/PortfolioSection/Portfolio.css
@@ -66,7 +66,8 @@
 }
 .card-img-overlay > * {
   transform: translateY(20px);
-  transition: transform 0.25s;
+  transition: transform 0.2s;
+  display: block;
 }
 
 .card-img-overlay:hover {
