--- a/src/components/SkillsSection/Skills.css
+++ b/src/components/SkillsSection/Skills.css
@@ -1,45 +1,59 @@
-.skillsWrapper{
-    background:#0c0c0c ;
-    width: 100%;
-    height: 100vh;
+.skillsWrapper {
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 5rem; /*modified*/
+  padding-top: 2.5rem; /* added */
+}
+
+#skills h1 {
+  font-size: 48px;
+  text-align: center;
+  padding: 24px 0px;
+}
+.skillName {
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  #skills {
+    height: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
     overflow: hidden;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    padding-bottom: 5rem;/*modified*/ 
-    padding-top: 2.5rem; /* added */
+    padding-bottom: 40px;
+  }
+  .skillsWrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  #skills h1 {
+    font-size: 40px;
+  }
 }
-
-#skills h1{
-    font-size: 48px;
-    text-align:center; 
-    padding:24px 0px;
-    
+@media screen and (max-width: 768px) {
+  .skillsWrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
-.skillName{
-    color: white;
+@media screen and (min-width: 1000px) {
+  #skills {
+    height: /* calc(100vh - 40px); */ auto;
+  }
 }
-
-@media screen and (max-width : 768px){
-    #skills{
-        height: auto;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        overflow: hidden;
-        padding-bottom: 40px;
-    }
-    #skills h1{
-        font-size: 40px;
-    }
-
-}
-@media screen and (min-width:1000px) {
-    #skills{
-        height: /* calc(100vh - 40px); */ auto;
-    }
-}
-@media screen and (max-width:480px){
-    #skills{
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+@media screen and (max-width: 480px) {
+  #skills {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .skillsWrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
