--- a/src/components/PortfolioSection/Portfolio.css
+++ b/src/components/PortfolioSection/Portfolio.css
@@ -1,5 +1,5 @@
 #portfolio {
-  background-color: #302f2f;
+  background-color: #000;
   width: 100%;
   height: auto /* 100vh 72px*/;
   overflow: hidden;
